# ga-synth

./: Cargo.toml  LICENSE  README.md
examples/: 01_subtractive_vs_additive.rs  02_ga_vs_hillclimber.rs  03_fitness_methods.rs  04_population_evol.rs  05_population_sizes.rs  06_mutation_rates.rs  07_target_sounds.rs  08_random_additions.rs  09_constructed_sound.rs  viva.rs
src/: error.rs  lib.rs  utils.rs
src/analytics/: mod.rs
src/signal_processing/: mod.rs  signal_analysis.rs
src/signal_processing/components/: envelope.rs  filters.rs  harmonics.rs  mod.rs  oscillator.rs
src/simulation/: mod.rs
src/simulation/algorithms/: genetic.rs  hillclimbing.rs  mod.rs
src/simulation/components/: envelope.rs  filters.rs  harmonics.rs  mod.rs  oscillator.rs
src/simulation/synthesis_methods/: additive.rs  mod.rs  subtractive.rs
