[package]
name = "ga-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp_frame = "0.11.0"
rand = "0.8.5"
wav_io = "0.1.12"
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
spectrum-analyzer = "1.5.0"
itertools = "0.12.1"
rayon = "1.10.0"
criterion = "0.5.1"
csv = "1.3.0"
anyhow = "1.0.82"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
